...
              tintColor={colors.accent}
              backBehavior="history"
            >
              <NativeTabs.Trigger
                name="(tasks)"
                disableAutomaticContentInsets={Platform.OS === 'ios'}
                testID="Tab Tasks"
                listeners={{
                  tabPress: () => {
                    if (active === 'tasks') router.dismissTo('/')
                  },
                }}
              >
...
                <NativeTabs.Trigger.Label>Artifacts</NativeTabs.Trigger.Label>
              </NativeTabs.Trigger>
              <NativeTabs.Trigger name="jobs" hidden />
              <NativeTabs.Trigger
                name="settings"
                disableAutomaticContentInsets={Platform.OS === 'ios'}
                testID="Tab Settings"
                listeners={{
                  tabPress: () => active === 'settings' && router.dismissTo('/settings'),
                }}
              >
                <NativeTabs.Trigger.Icon src={iconAssets.settings} renderingMode="template" />
                <NativeTabs.Trigger.Label>Settings</NativeTabs.Trigger.Label>
...
